--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/react": "^17.0.38",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.4",
+    "@types/react-dom": "16.9.0",
     "chart.js": "^3.6.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
