--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/react": "^17.0.38",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "16.9.0",
     "chart.js": "^3.6.1",
     "express": "^4.17.1",
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slidy": "^4.3.3",
@@ -48,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-lazy-load-image-component": "^1.5.2"
   }
 }
