--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "16.9.0",
     "chart.js": "^3.6.1",
     "express": "^4.17.1",
+    "firebase": "^9.6.3",
     "jquery": "^3.6.0",
     "lottie-web": "^5.8.1",
     "moment": "^2.29.1",
