--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-netflix-clone",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
