--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.13",
     "@types/react-lazy-load-image-component": "^1.5.2"
   }
 }
