--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,11 @@
     "name": "Create React App Sample",
     "icons": [
         {
+            "src": "favicon.ico",
+            "sizes": "64x64 32x32 24x24 16x16",
+            "type": "image/x-icon"
+        },
+        {
         "src": "https://github.com/strawhat19/react-netflix-clone/blob/main/public/assets/netflixIconTransparentXL.png?raw=true",
         "sizes": "64x64 32x32 24x24 16x16",
         "type": "image/x-icon"
@@ -12,4 +17,4 @@
     "display": "standalone",
     "theme_color": "#000000",
     "background_color": "#ffffff"
-    }
+}
