--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "16.9.0",
     "chart.js": "^3.6.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "firebase": "^9.6.3",
     "lottie-web": "^5.8.1",
