--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b main -d build",
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
