--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-scripts": "4.0.3",
     "react-slidy": "^4.3.3",
     "typescript": "^4.5.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "concurrently": "^5.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -45,7 +46,8 @@
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "develop": "npm run build && npm start"
   },
   "eslintConfig": {
     "extends": [
