--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "react-netflix-clone",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "16.x",
-    "npm": "8.x"
-  },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
     "react-error-overlay": "6.0.9"
@@ -23,6 +19,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "16.9.0",
     "chart.js": "^3.6.1",
+    "concurrently": "^5.3.0",
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "firebase": "^9.6.3",
@@ -36,9 +33,9 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slidy": "^4.3.3",
-    "typescript": "^4.5.4",
     "web-vitals": "^1.1.2",
-    "concurrently": "^5.3.0"
+    "typeorm": "0.2.25",
+    "ts-node": "8.10.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -68,6 +65,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-lazy-load-image-component": "^1.5.2"
+    "@types/express": "^4.17.1",
+    "@types/react-lazy-load-image-component": "^1.5.2",
+    "typescript": "^4.5.5"
   }
 }
