--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slidy": "^4.3.3",
-    "web-vitals": "^1.1.2",
+    "ts-node": "8.10.1",
     "typeorm": "0.2.25",
-    "ts-node": "8.10.1"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -44,7 +44,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "develop": "npm run build && npm start"
+    "develop": "npm install && npm run build && npm start"
   },
   "eslintConfig": {
     "extends": [
@@ -68,5 +68,8 @@
     "@types/express": "^4.17.1",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "typescript": "^4.5.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
