--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slidy": "^4.3.3",
+    "react-youtube": "^7.14.0",
     "ts-node": "8.10.1",
     "typeorm": "0.2.25",
     "web-vitals": "^1.1.2"
