--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-slidy": "^4.3.3",
     "react-youtube": "^7.14.0",
     "ts-node": "8.10.1",
     "typeorm": "0.2.25",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^5.95.0"
   },
   "scripts": {
     "predeploy": "npm run build",
